Fri Feb 16 15:50:51 1996  Mark Eichin  <eichin@cygnus.com>

	* ftp.c (do_auth): return status handling fixes from kbalk@hp.com.

Tue Jan 16 19:05:31 1996  Mark Eichin  <eichin@cygnus.com>

	* ftp.c (login): move do_auth ...
	* cmds.c (setpeer): ... to just before login call.

Mon Feb 5 09:06:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Check for stdlib.h

	* secure.c, pclose.c, ruserpass.c, ftp.c: Include stdlib.h if
		present for malloc declarations.

Thu Jan 18 18:33:18 1996  Sam Hartman  <hartmans@zygorthian-space-raiders.MIT.EDU>

	* cmds.c: Handle sys_errlist and remove declaration of errno.

	* configure.in: Check to see if we need to declare sys_errlist.

	* ftp.c secure.c: Only define sys_errlist if needed

Thu Jan 18 11:55:50 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Check for sys/select.h

	* ftp.c: Include sys/select.h if present.

Sun Jan 14 01:54:35 1996  Bill Schoofs <wjs@cray.com>

	* Makefile.in (DEFINES): define NOCONFIDENTIAL for future use.
	* ftp.c (command): recognize 533, not 402, for 'server unwilling
	to accept' 
	(getreply): recognize 633 for confidential reply, and then don't
	support it.
	
Tue Jan  2 19:17:47 1996  Mark Eichin  <eichin@cygnus.com>

	* pclose.c: test HAVE_GETDTABLESIZE instead of hpux.
	* configure.in: set HAVE_GETDTABLESIZE.

Fri Oct 20 11:59:32 1995  Mark W. Eichin  <eichin@cygnus.com>

	* ftp.c (do_auth): synthesize channel bindings from myctladdr and
	hisctladdr, based on changes pending for draft 9.

Thu Oct 19 04:47:36 1995  Mark W. Eichin  <eichin@cygnus.com>

	* configure.in: check for POSIX_TERMIOS just like appl/bsd does.

Wed Oct  4 19:24:39 1995  Mark Eichin  <eichin@cygnus.com>

	* ftp, pclose, ruserpass.c, secure.c: don't ever declare malloc.

Sun Oct  1 03:30:30 1995  Mark Eichin  <eichin@cygnus.com>

	* ftp.c (do_auth): accept ADAT 3yz response. Clean up loops, add
	lots of debugging messages.

Sun Oct  1 00:56:55 1995  Mark Eichin  <eichin@cygnus.com>
