@@ -9,6 +9,7 @@ CHECK_WAIT_TYPE
 DECLARE_SYS_ERRLIST
 AC_FUNC_VFORK
 AC_HAVE_FUNCS(getcwd getdtablesize)
+AC_HEADER_STDARG
 AC_CHECK_HEADERS(sys/select.h)
 AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK(cfsetispeed,AC_DEFINE(POSIX_TERMIOS)))
 AC_CHECK_HEADERS(stdlib.h)
